@@ -1,5 +1,6 @@
 next
   [Fixed]
+  - Critical: Fix "use after free" when a client terminates or unmaps.
   - More robust against nonsensical data received from the IPC client.
     In other words: Added various out-of-bounds checks.
   - Fix focus issues with suckless tabbed after changing workspaces or
